some additional style

--- a/http/firebase_sample/views/userList.ejs
+++ b/http/firebase_sample/views/userList.ejs
@@ -17,7 +17,7 @@
         <% if (data) { %>
           <ul class="user-list">
             <% data.forEach(user => { %>
-              <li><span><%= user.id + " (" + user.name + ")" %></span></li>
+              <li><%= user.id + " (" + user.name + ")" %></li>
             <% }) %>
           </ul>
         <% } %>
