--- a/http/firebase_sample/css/style.css
+++ b/http/firebase_sample/css/style.css
@@ -59,16 +59,22 @@ body {
   transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-.user-list li.active {
-  background-color: #34e1ab;
-}
-
 .user-list li:hover {
   /* background-color: #34e1ab; */
   background-position: left;
   cursor: pointer;
 }
 
+.user-list li.active {
+  -webkit-transition: none;
+  -ms-transition: none;
+  transition: none;
+  background: #34e1ab;
+}
+
 .user-list li.active:hover {
-  background-color: #28ca98;
+  -webkit-transition: none;
+  -ms-transition: none;
+  transition: none;
+  background: #28ca98;
 }
